<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ff000000"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:id="@+id/demon_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/trooa1"
        android:layout_margin="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/demon_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Imp"
        android:textSize="24sp"
        android:textColor="#ffff0000"
        android:textStyle="bold"
        android:layout_marginStart="140dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@id/demon_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/demon_health_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demon_health_title"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/demon_name"
        app:layout_constraintStart_toEndOf="@id/demon_image"
        />

    <TextView
        android:id="@+id/demon_attack_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demon_attack_title"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/demon_health_title"
        app:layout_constraintStart_toEndOf="@id/demon_image"
        />

    <TextView
        android:id="@+id/demon_agility_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demon_agility_title"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/demon_attack_title"
        app:layout_constraintStart_toEndOf="@id/demon_image"
        />

    <TextView
        android:id="@+id/demon_health_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:text="60"
        android:textColor="#ffffffff"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/demon_health_title"
        app:layout_constraintTop_toBottomOf="@id/demon_name"
        />

    <TextView
        android:id="@+id/demon_attack_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:layout_marginStart="2dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@id/demon_attack_title"
        app:layout_constraintTop_toBottomOf="@id/demon_name"
        />

    <TextView
        android:id="@+id/demon_agility_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:layout_marginStart="2dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toEndOf="@id/demon_agility_title"
        app:layout_constraintTop_toBottomOf="@id/demon_name"
        />

    <TextView
        android:id="@+id/demon_attack_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/10"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:layout_marginStart="2dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@id/demon_attack_value"
        app:layout_constraintTop_toBottomOf="@id/demon_name"
        />

    <TextView
        android:id="@+id/demon_agility_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/10"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:layout_marginStart="2dp"
        android:layout_marginTop="68dp"
        app:layout_constraintStart_toEndOf="@id/demon_agility_value"
        app:layout_constraintTop_toBottomOf="@id/demon_name"
        />

</androidx.constraintlayout.widget.ConstraintLayout>